Python FM-Demod added

--- a/FM_Demodulation/demod.ipynb
+++ b/FM_Demodulation/demod.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,27 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1+1j)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fm_complex[1].conjugate()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +29,21 @@
     "\n",
     "signal = np.zeros(len(fm_complex))\n",
     "last_in = 0 + 1j * 0\n",
-    "for i in range(len(fm_complex)):\n",
+    "for i in range(len(fm_complex)-1):\n",
     "    signal[i] = np.imag(fm_complex[i]*last_in.conjugate())\n",
     "    last_in = fm_complex[i]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save Audio\n",
+    "import scipy.io.wavfile as wav\n",
+    "\n",
+    "wav.write('/Users/dave/Documents/Schaltkreisentwurf/FM_Demodulation/Signal.wav', 200000, signal)"
    ]
   },
   {
@@ -59,9 +51,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Save Audio\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
