*Algorithmus idea added

--- a/Beleg/FM_Demodulation/demod.ipynb
+++ b/Beleg/FM_Demodulation/demod.ipynb
@@ -2,13 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#LP Filter FM Signal\n",
+    "\n",
+    "from scipy.signal import butter, lfilter\n",
+    "from scipy.signal import freqs, decimate\n",
+    "\n",
+    "def butter_lowpass(cutOff, fs, order=5):\n",
+    "    nyq = 0.5 * fs\n",
+    "    normalCutoff = cutOff / nyq\n",
+    "    b, a = butter(order, normalCutoff, btype='low', analog = True)\n",
+    "    return b, a\n",
+    "\n",
+    "def butter_lowpass_filter(data, cutOff, fs, order=4):\n",
+    "    b, a = butter_lowpass(cutOff, fs, order=order)\n",
+    "    print(b,a)\n",
+    "    y = lfilter(b, a, data)\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00032] [1.00000000e+00 6.47213595e-01 2.09442719e-01 4.18885438e-02\n",
+      " 5.17770876e-03 3.20000000e-04]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
     "\n",
+    "fs = 200000\n",
     "#load data \n",
     "\n",
     "fm_real = np.genfromtxt('fm_signal_real_fs_200kHz.dat')\n",
@@ -16,7 +50,10 @@
     "fm_imag = np.genfromtxt('fm_signal_imag_fs_200kHz.dat')\n",
     "\n",
     "\n",
-    "fm_complex = fm_real + 1j * fm_imag"
+    "fm_complex = fm_real + 1j * fm_imag\n",
+    "\n",
+    "#Filter \n",
+    "fm_complex = butter_lowpass_filter(fm_complex, 20000, fs=fs, order = 5)"
    ]
   },
   {
@@ -49,7 +86,7 @@
     "#Spektrale Analyse\n",
     "\n",
     "from numpy.fft import fft, fftshift\n",
-    "fs = 200000\n",
+    "\n",
     "fm_spec = fft(fm_complex)\n",
     "\n",
     "delta_f = fs/len(fm_spec)\n",
@@ -87,41 +124,6 @@
     "# Offset beseitigen\n",
     "\n",
     "signal_no_offset = signal - 2*np.pi * f_o * 1/fs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.00032] [1.00000000e+00 6.47213595e-01 2.09442719e-01 4.18885438e-02\n",
-      " 5.17770876e-03 3.20000000e-04]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#LP Filter FM Signal\n",
-    "\n",
-    "from scipy.signal import butter, lfilter\n",
-    "from scipy.signal import freqs, decimate\n",
-    "\n",
-    "def butter_lowpass(cutOff, fs, order=5):\n",
-    "    nyq = 0.5 * fs\n",
-    "    normalCutoff = cutOff / nyq\n",
-    "    b, a = butter(order, normalCutoff, btype='low', analog = True)\n",
-    "    return b, a\n",
-    "\n",
-    "def butter_lowpass_filter(data, cutOff, fs, order=4):\n",
-    "    b, a = butter_lowpass(cutOff, fs, order=order)\n",
-    "    print(b,a)\n",
-    "    y = lfilter(b, a, data)\n",
-    "    return y\n",
-    "\n",
-    "y = butter_lowpass_filter(signal_no_offset, 20000, fs=fs, order = 5)"
    ]
   },
   {
